--- a/vignettes/M3Cvignette.Rmd
+++ b/vignettes/M3Cvignette.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "M3C: Monte Carlo Consensus Clustering"
+title: "M3C: Monte Carlo Reference-based Consensus Clustering"
 author: "Christopher R John"
 date: "24/05/2017"
 output: 
@@ -12,7 +12,7 @@ vignette: >
 
 ### Abstract
 
-Genome-wide data is used to stratify patients into classes using class discovery algorithms. However, we have observed systematic bias present in state-of-the-art methods. This arises from not considering reference distributions while selecting the number of classes (K). As a solution, we developed a consensus clustering-based algorithm with a hypothesis testing framework called Monte Carlo consensus clustering (M3C). M3C uses a multi-core enabled Monte Carlo simulation to generate null distributions along the range of K which are used to calculate p values to select its value. P values beyond the limits of the simulation are estimated using a beta distribution. M3C can quantify structural relationships between clusters and uses spectral clustering to deal with non-Gaussian and imbalanced structures.
+Genome-wide data is used to stratify patients into classes using class discovery algorithms. A popular method is consensus clustering, however; the approach is prone to overfitting and false positives. These issues arise from not considering reference distributions while selecting the number of classes (K). As a solution, we developed Monte Carlo reference-based consensus clustering (M3C). M3C uses a multi-core enabled Monte Carlo simulation to generate null distributions along the range of K which are used to select its value. Using the appropiate reference eliminates the limitations of the consensus clustering method. M3C can also quantify structural relationships between clusters, and uses spectral clustering to deal with non-Gaussian and complex structures.
 
 ### Prerequisites
 
@@ -65,11 +65,11 @@ In the PCA plot below we can see there are no obvious non linear structures, ext
 PCA1 <- pca(mydata)
 ```
 
-![*Figure 1: CDF plot for real data*](PCApriorclustering.png)
+![*Figure 1: Preliminary PCA to check structure*](PCApriorclustering.png)
 
 ### Running M3C
 
-In our example, we run the algorithm using the default settings (100x Monte Carlo iterations and 100x inner replications). We have found the results generally stable using these parameters. M3C may be run twice to test stability of the results or the inner replications parameter may be increased to 200x. If you are running a slow machine or want results quickly, it is reasonable to lower the Monte Carlo iterations parameter to 50x or even 20x.
+In our example, we run the algorithm using the default settings (100x Monte Carlo iterations and 100x inner replications). We have found the results generally stable using these parameters. M3C may be run twice to test stability of the results or the inner replications parameter may be increased to 200x. If you are running a slow machine or want results quickly, it is reasonable to lower the Monte Carlo iterations parameter to 50x or 20x.
 
 Plots from the tool and an .csv file with the numerical outputs may be printed into the working directory (by adding printres = TRUE). We will set the seed in this example, incase you wish to repeat our results exactly (seed = 123). We will add the annotation file for streamlined downstream analyses (des = desx).
 
@@ -92,15 +92,15 @@ This is a CDF plot of the consensus matrices for our test data. We are looking f
   
 ![*Figure 2: CDF plot for real data*](CDF.png)
 
-This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, we are not able to quantify how confident we are in this value without comparison versus a null dataset. Indeed, this may just be the result of random noise.
+This figure below is the PAC score, we can see an elbow at K = 4 which is suggestive this is the best K. However, the overfitting problem of the PAC score can be seen here as it tends towards lower values as K increases, thus making selecting K without taking this into account challenging to say the least. Furthermore, the PAC score cannot reject the null hypothesis K=1, for that we have introduced p values into the consensus clustering methodology. 
 
 ![*Figure 3: PAC score for real data*](PACscore.png){width=90%}
 
-We then derive the Relative Cluster Stability Index (RCSI) which takes into account the reference PAC scores, but not the shape of the distribution. This metric is better than the PAC score for deciding class number, where the maximum value corresponds to the best value of K. In this example the RCSI has an optima at K=4. It generally requires fewer iterations than deriving the empirical p values.
+We then derive the Relative Cluster Stability Index (RCSI) which takes into account the reference PAC scores using the reference mean. This metric is better than the PAC score for deciding class number, where the maximum value corresponds to the optimal K. In this example the RCSI has an optima at K=4. We recommend the RCSI be used to select K, and the p values to reject the null in most cases.
 
 ![*Figure 4: RCSI*](RCSI.png){width=90%}
 
-Finally, we calculate a p value from the distribution, here we display the p values from the beta distribution. If none of the p values reach significance over a reasonable range of K (e.g. 10), then we accept the null hypothesis. In the GBM dataset, we can see K = 4 reaches signfiicance with an alpha of 0.05 (red dotted line), therefore we can reject the null hypothesis for the GBM dataset.
+Finally, we calculate a p value from the distribution, here we display the p values from the beta distribution. If none of the p values reach significance over a reasonable range of K (e.g. 10), then we accept the null hypothesis. In the GBM dataset, we can see K = 4 reaches signfiicance with an alpha of 0.05 (red dotted line), therefore we can reject the null hypothesis K=1 for the GBM dataset.
 
 ![*Figure 5: Empirical p values*](pscore.png){width=90%}
 
@@ -152,7 +152,7 @@ NMF::aheatmap(ccmatrix, annCol = annon, Colv = NA, Rowv = NA,
 
 ### Final check of consensus cluster structure
 
-A last analysis we recommend to do is to examine how the clusters are arranged in principal component and t-SNE latent variable space. To do this the PCA and tsne functions can be run directly on the M3C output object. We may need to experiment with the perplexity parameter of tSNE in the range of 5-20 to better suit the data. Both functions can also be used to print their results to the working directory.
+A last analysis we recommend to do is to examine how the clusters are arranged in principal component and tSNE latent variable space. To do this the pca and tsne functions can be run directly on the M3C output object. We may need to experiment with the perplexity parameter of tSNE in the range of 5-20 to better suit the data. Both functions can also be used to print their results to the working directory.
 
 ```{r,fig.show = 'hide',message=FALSE,results='hide'}
   PCA2 <- pca(res, K=4)
@@ -167,7 +167,7 @@ We can see in the PCA and tSNE plots that clusters 3 and 4 are closer together. 
 
 ### Generating simulated data
 
-We have included a function for generating simulated data to test various clustering algorithms. This cluster simulator is simple to use. Using the code below, clustersim generates a dataset with 225 samples, 900 features, a radius cut-off for the initial square of 8, a cluster number of 4, a seperation of clusters of 0.75, and a degree of noise added to each co-ordinate of 0.025. After running, a PCA will print of the data so we can visualise the 4 clusters in principle component space. 
+We have included a function for generating simulated data to test various clustering algorithms from the Șenbabaoğlu et al. (2014) study. This cluster simulator is simple to use. Using the code below, clustersim generates a dataset with 225 samples, 900 features, a radius cut-off for the initial square of 8, a cluster number of 4, a seperation of clusters of 0.75, and a degree of noise added to each co-ordinate of 0.025. After running, a PCA will print of the data so we can visualise the 4 clusters in principle component space. 
 
 Note, clustersim's method has recently been replaced with the CRAN package, clusterlab. We recommend using this for more sophisticated benchmarking. Clusterlab can generate Gaussian clusters with controlled variance and spacing, it can also create more complex higher order structures.
 
@@ -179,7 +179,7 @@ Note, clustersim's method has recently been replaced with the CRAN package, clus
 
 ### Closing comments
 
-In this tutorial, we have seen that M3C provides a rigourous approach for selecting the number of clusters in the data opposed to relying on relative scores. We have found in our analyses this approach results in increased performance relative to other methods and the removal of systematic bias inherant in the results. M3C's methodological and software developments are primarily built on the work of Tibshirani et al. (2001), Șenbabaoğlu et al. (2014), and Monti et al. (2003). 
+In this tutorial, we have seen that M3C provides a rigourous approach for selecting the number of clusters in the data. We have found in our analyses this approach results in increased performance relative to other methods and the removal of systematic bias inherant in the results. M3C's methodological and software developments are primarily built on the work of Tibshirani et al. (2001), Șenbabaoğlu et al. (2014), and Monti et al. (2003). 
 
 During the development of M3C, we also devised a flexible method and associated CRAN package for generating Gaussian clusters called, clusterlab (https://cran.r-project.org/web/packages/clusterlab/index.html). This tool should prove useful in testing the performance of class discovery algorithms.
 
